# value-task

./: .env  main.py  manager.py  pyproject.toml  read_behaviour.py
analyze/: read_data.py
configs/: calibration.py  flea_distribution.py  flea_random.py  fleabottom.py  locs.csv
server/: index.html
stimuli/: stimuli.csv  stimuli.json
trials/: calibration.py  distribution_twoafc.py  forced.py  twoafc.py
