[project]
name = "value-task"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "experiment",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyserial>=3.5",
]

[tool.uv.sources]
experiment = { git = "https://github.com/jselvan/experiment" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "seaborn>=0.13.2",
]
